--- a/frontend/src/app/components/SignInPanel.module.css
+++ b/frontend/src/app/components/SignInPanel.module.css
@@ -75,6 +75,7 @@ a.secondary {
   font-weight: 400;
   line-height: 24px; /* 150% */
   text-decoration: underline;
+  margin-left: auto;
   display: block;
-  text-align: right;
+  width: fit-content;
 }
